# Spatially-Conditioned-Schrodinger-Bridges-for-Tumor-to-Normal-Transcriptional-Transitions

./: .gitignore  Makefile  README.md  README.md.premerge_untracked  framework_details.md  kernel_wrapper.sh  omega_spatial.bayes.yaml  omega_spatial.default.yaml  omega_spatial.stage4b.tuned.yaml  omega_spatial.stage4b.yaml  pyproject.toml  scanpy_normalize_workaround.py  synthetic_validation.py
.mpl_cache/: fontlist-v390.json
logs/: coordinator_artifacts.json  stage_1_artifacts.json  stage_2_artifacts.json  stage_3_artifacts.json  stage_4_artifacts.json  stage_5_artifacts.json  stage_6_artifacts.json  stage_7_artifacts.json  stage_8_artifacts.json  stage_9_artifacts.json
omega_spatial/: __init__.py  benchmarks.py  cli.py  cna.py  config.py  io.py  model.py  perturbations.py  pipeline.py  preflight.py  programs.py  qc.py  readiness.py  reporting.py  sensitivity.py  spatial.py  states.py  synthetic_validation.py  types.py  utils.py  validation.py
scripts/: build_presentation.py
tests/: test_bayesian_bridge.py  test_preflight.py  test_sensitivity.py  test_stage_1_data_ingestion.py  test_stage_2_marginal_definition.py  test_stage_3_spatial_context.py  test_stage_4_bridge_model.py  test_stage_5_perturbation_extraction.py  test_stage_6_program_discovery.py  test_stage_7_reporting_benchmarking.py  test_stage_8_heldout_validation.py  test_stage_9_cross_modal_validation.py  test_synthetic_validation.py  test_true_cna_pipeline.py
